<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:layout_above="@+id/tvResult"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="48sp" />



    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingVertical="16dp">

        <!--первая строка кнопок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_clear"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOpenBrackets"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_open_brackets"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCloseBrackets"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_close_brackets"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDiv"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_div"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>
        </LinearLayout>

        <!--вторая строка кнопок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_7"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_8"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_9"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMul"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_mul"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>
        </LinearLayout>

        <!--третья строка кнопок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_4"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_5"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_6"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSub"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_minus"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>
        </LinearLayout>

        <!--четвёртая строка кнопок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_1"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_2"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_3"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_plus"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>
        </LinearLayout>

        <!--пятая строка кнопок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_AC"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_0"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#3F51B5"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_dot"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEqual"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:text="@string/button_equals"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="15dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>